--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>kris1803 portfolio</title>
+    <title>Kristians portfolio</title>
   </head>
   <body style="min-height: 100vh;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
