--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Kristians Portfolio" />
     <meta
       name="description"
-      content="Fullstack JavaScript developpere with a focus on React and React Native"
+      content="Fullstack JavaScript developper with a focus on React and React Native"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
