--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -10,6 +10,14 @@
       name="description"
       content="Fullstack JavaScript developper with a focus on React and React Native"
     />
+    <meta name="og:title" content="Kristians Portfolio" />
+    <meta
+      name="og:description"
+      content="Fullstack JavaScript developper with a focus on React and React Native" 
+    />
+    <meta name="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta name="og:url" content="https://kris1803.github.io/" />
+    <meta name="og:type" content="website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
