added as header

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <meta name="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta name="og:url" content="https://kris1803.github.io/" />
     <meta name="og:type" content="website" />
+    <meta property="og:locale" content="en_GB" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
