added google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       name="og:description"
       content="Fullstack JavaScript developper with a focus on React and React Native" 
     />
-    <meta name="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta name="og:image" content="/img/assets/site_screenshot.png" />
     <meta name="og:url" content="https://kris1803.github.io/" />
     <meta name="og:type" content="website" />
     <meta property="og:locale" content="en_GB" />
